# BastionMania

./: .gitignore  README.md
.github/workflows/: AdminManagement.yaml  Agent.yaml  ApiGateway.yaml  Authentification.yaml  Bastion.yaml  BastionBackend.yaml  BastionInstancieur.yaml  BastionManager.yaml  BastionResourceController.yaml  Front.yaml  FrontAdmin  UserManagement.yaml
AdminManagement/: .env  Cargo.toml  Dockerfile  README.md
AdminManagement/migrations/2022-12-10-131505_create_users/: down.sql  up.sql
AdminManagement/src/: main.rs  schema.rs
AdminManagement/src/admin/: communication.rs  mod.rs  model.rs  routes_utilisation.rs
AdminManagement/src/tools/: api_error.rs  claims.rs  mod.rs
Agent/: Cargo.toml  Dockerfile  README.md  docker-compose-template.yml
Agent/src/: config.rs  lib.rs  main.rs  wireguard.rs
Ansible/: README.md  config_worker_kata.yaml  install_common.yaml  install_master.yaml  install_worker.yaml  installation_worker.yaml  reboot_masters.yaml  update.yaml  worker.yaml
Ansible/init_files/: kubeadm-config.yaml
Ansible/master_files/: grub
Ansible/worker_files/: configuration-kata-fc.toml  containerd-shim-kata-fc-v2  containerd.toml  devmapper_create.sh  devmapper_reload.service  devmapper_reload.sh
ApiGateway/: Dockerfile  README.md
Authentification/: .env  Cargo.toml  Dockerfile  README.md
Authentification/migrations/2022-12-10-120003_create_users/: down.sql  up.sql
Authentification/migrations/2023-04-11-190303_create_table/: up.sql
Authentification/src/: main.rs  schema.rs
Authentification/src/admin/: mod.rs  model.rs  routes_admin.rs
Authentification/src/tools/: api_error.rs  claims.rs  db.rs  keycloak.rs  mod.rs  password_management.rs
Authentification/src/user/: communication.rs  mod.rs  model.rs  routes_user.rs
Authentification/src/verification/: mod.rs  model.rs  routes_jwt_verif.rs
Bastion/: .dockerignore  Bastion.yaml  Cargo.toml  Dockerfile  README.md
Bastion/src/: api.rs  bastionconfig.rs  consts.rs  database.rs  init.rs  lib.rs  main.rs  model.rs  persistance.rs  startup.rs  wgconfigure.rs
Bastion/src/api/: endpoints.rs  mod.rs
Bastion/src/ssh/: authorized_keys.rs  config.rs  mod.rs  model.rs  ressource.rs  user.rs  utils.rs
Bastion/src/wireguard/: init.rs  mod.rs  model.rs  persistance.rs  wgconfigure.rs
Bastion/ssh_files/: banner  sshd_config
BastionBackend/: .env  Cargo.toml  Dockerfile  README.md
BastionBackend/migrations/2022-12-12-164201_create_posts/: down.sql  up.sql
BastionBackend/src/: api_error.rs  db.rs  lib.rs  main.rs  schema.rs  services.rs
BastionBackend/src/api/: bastion.rs  mod.rs  model.rs  repository.rs
BastionBackend/src/entities/: bastion.rs  k8sressource.rs  mod.rs  ressource.rs  session.rs  sshressource.rs  userconfigssh.rs  userconfigwireguard.rs  users.rs  wireguardressource.rs
BastionBackend/src/model/: Bastion.rs  WireguardCC.rs  WireguardRQ.rs  WireguardSC.rs  agentproof.rs  bastioninstancecreate.rs  bastionmodification.rs  claims.rs  configagent.rs  configclient.rs  configuser.rs  instanceclient.rs  k8sressourcemodification.rs  mod.rs  ressourcecredentialsssh.rs  ressourcecredentialwireguard.rs  ressourceinstancecreate.rs  ressourcemodification.rs  retourapi.rs  retourwireguardconfig.rs  sshressourcemodification.rs  usersinstancecreate.rs  usersmodification.rs  wireguardressourcemodification.rs
BastionInstancieur/: Cargo.toml  Dockerfile  KubernetesDeployment.yaml
BastionInstancieur/src/: api.rs  bastions.rs  lib.rs  main.rs  model.rs
BastionInstancieur/src/k8s/: helpers.rs  mod.rs  objects.rs
BastionKubernetesRessource/: BastionResExemple.yml  Cargo.toml
BastionKubernetesRessource/src/: main.rs
BastionKubernetesRessource/src/ressources/: mod.rs
BastionResourceController/: BastionResExemple.yml  Cargo.toml  Dockerfile  KubernetesDeployment.yaml  README.md
BastionResourceController/src/: controller.rs  gencrd.rs  lib.rs  main.rs
BastionResourceController/src/ressources/: bastion_pod.rs  bastion_services.rs  mod.rs
Front/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json
Front/src/: styles.scss
Front/src/app/: app-routing.module.ts  app.module.ts
Front/src/app/admin/: admin-info.ts  admin-routing.module.ts  admin.module.ts  admin.service.ts  auth-admin.guard.ts  bastion-info.ts  bastion.ts  configure-agent.ts  list-user-bastion-received.ts  new-admin.ts  new-bastion.ts  new-ressource-ssh-creation.ts  new-ressource-wireguard-creation.ts  new-ressource.ts  new-user-bastion.ts  new-user.ts  (+2 more)
FrontAdmin/: angular.json
Kubernetes/: AdminManagement-deployement.yaml  Authentication-deployment.yaml  BastionBackend-Db-Deployment.yaml  BastionBackend-deployment.yaml  BastionInstancieur-deployment.yaml  BastionResourceController-deployment.yaml  CiliumPolicies.yaml  Commandes.md  ConfigMap-bastionbackend-env.yaml  CreateDatabase-Job.yaml  Deployment-BastionInstancieur.yml  Front-deployment.yaml  Kong-deployment.yaml  Metellb-configuration.yaml  Postgres-pvc.yaml  Postgres-values.yaml  Role-BastionInstancieur.yml  RoleBinding-BastionInstancieur.yml  Secret-BastionInstancieur-token.yml  Secret-bastionbackend-env.yaml  ServiceAccount-BastionInstancieur.yml  UserManagement-deployment.yaml  kong-cors-plugin.yml  kong-ingress.yml
OpenAPI/: AdminManagement.json  Authentification.json  Bastion.json  BastionInstancieur.json  BastionManager.json  UserManager.json
Schemas/: diagramme_classe.drawio  sequence_creation_bastion.drawio  sequence_creation_user.drawio  sequence_generate_wireguard.drawio  use_case.drawio  web_portail.drawio
UserManagement/: .env  Cargo.toml  Dockerfile  README.md
UserManagement/migrations/2022-12-11-150424_create_posts/: up.sql
UserManagement/src/: db.rs  main.rs  schema.rs
UserManagement/src/tools/: claims.rs  db.rs
UserManagement/src/user/: communication.rs  mod.rs  model.rs  routes_utilisation.rs
logging/: README.md
logging/elk/: README_LOGS_2.md  elasticsearch.yml  filebeat.conf  filebeat.yml
logging/fluentbit/: README_LOGS_3.mb
logging/fluentd/: README_LOGS_1.md
(+98 files in other folders)
