[package]
name = "bastion-mania-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
log = "0.4.17"
simple_logger = "4.1.0"
reqwest = { version = "0.11.18", default-features = false, features = ["json", "blocking", "rustls-tls"] }
wireguard-keys = "0.1.1"
serde = { version = "1.0", features = ["derive"] }