[package]
name = "authentication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenvy = "0.15"
diesel = { version = "2.0.0", features = ["postgres", "uuid"] }
env_logger = "0.9.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
rust-argon2 = "1.0"
jsonwebtoken = "8"
aes-gcm = "0.10.1"
time = "0.3.17"
google-authenticator = { version = "0.2.0"}
uuid = { version = "1.3.1", features=["serde"]}
base64 = "0.21.0"