[package]
name = "BastionManager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
diesel={version = "2.0.0", features = ["postgres"]}
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.8"
log = "0.4"
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }
derive_more = "0.99"
jsonwebtoken = "8"
chrono = "0.4.23"
time = "0.3.17"
wireguard-keys = "0.1.1"