[package]
name = "bastion-mania-bastioninstancieur"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.78.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.3"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"