[package]
name = "user_management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.7.0"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
dotenvy = "0.15"
diesel = { version = "2.0.0", features = ["postgres"] }
env_logger = "0.9.3"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
rand = "0.7"
rust-argon2 = "1.0"
jsonwebtoken = "8"
chrono = "0.4.23"
chacha20poly1305 = "0.9.1"
time = "0.3.17"
reqwest = { version = "0.11.13", features = ["json"] }
google-authenticator = { version = "0.2.0"}