[package]
name = "user_management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenvy = "0.15"
diesel = { version = "2.0.0", features =  ["postgres", "uuid"] }
log = "0.4.17"
simple_logger = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8"
time = "0.3.17"
reqwest = { version = "0.11.13", features = ["json"] }
google-authenticator = { version = "0.2.0"}
uuid = { version = "1.3.1", features=["serde", "v4"]}